	   interchangable.
	3. Add external magnetic and electric fields.
	4. Incident angle dependent excitation for Stark-Zeeman levels.
	5. Improve radial integrate involving continuum orbitals.
	6. Improve the construction of Y^k(r) functions.
	7. Use CPC routine for Coulomb multiple matrix elements for high
	   partial wave extrapolation.
	8. add modifiers to the configuration specification.
	
Version 1.1.0, 10/03/2005
	1. reimplement the StructureMBPT function.
	2. add interface to njsym, and use that for general recoupling.
	3. add memory limits for the arrays used in radial.c
	4. correct an error in the 1-body contribution to autoionization.
	5. avoid overflow of 2j in UTA mode in the EN_DB file.
	6. change the format of DB_RT file.
	7. add output for the 4th NLTE workshop submission.
	
Version 1.0.9, 04/04/2005
	1. modify dbase.c so that it is platform independent.	
	2. split the functionality of dbase.c so that it is isolated from
	   other files. It now only depends on dbase.h, and consts.h.
	
Version 1.0.8, 01/01/2005
	1. implement configuration average radiative transitions. including
	   energy shift and width of the UTAs.
	2. configuration average transitions for all other processes.
	3. update CRM module for UTA model.
	4. enable CI within the same non-relativisitc configuration for UTA.
	5. fix a bug in GetNumElectrons introduced ealier in this version.
	6. add JoinTable function.
	7. it seems that g77 3.4 generate incorrect code for dlamch.f with
	   -O2, now disable optimization for dlamch.f always.
	
Version 1.0.7, 11/10/2004
	1. add DR satellite energy to the DB_DR file.
	2. add the RRMultipole function for bound-free multipole matrix
	   elements.
	3. rewrite Angular coupling routines, much faster now.
	4. DB_TR file now stores the multipole matrix elements, instead of gf
	   values. The ASCII mode text file also has an additional column
	   giving the matrix elements.
	5. Binary output for rmatrix module.
	
Version 1.0.6, 09/05/2004